view cleanup a-layout

--- a/app/views/contacts/_form_popup.html.erb
+++ b/app/views/contacts/_form_popup.html.erb
@@ -64,7 +64,11 @@
 	<!-- inactive submit button & blurb -->
 	<div id="nosubmit-<%=type%>">
 		<p class="graySubmitButtonContainer"><%= image_tag "/assets/smallSubmitGray.png"%></p>
-		<p class="noSubmitButtonContainer">Please include both an<br />email and a message<br />before submitting.</p>
+		<p class="noSubmitButtonContainer">
+			Please include both an<br />
+			email and a message<br />
+			before submitting.
+		</p>
 	</div><!-- end inactive submit button -->
 	
 	
