--- a/app/views/contacts/thank_you.html.erb
+++ b/app/views/contacts/thank_you.html.erb
@@ -1,22 +1,24 @@
+<!-- This page is where a user is directed after their contact_us form has been submitted -->
+
 <%= javascript_include_tag "/assets/jquery.js"%>
 
 <style>
-#top {
+#top { /* to give space at the top of a container */
 	margin-top:30px;
 }
-#innerContainer {
+#innerContainer { /* contains all content */
 	text-align:center;
 }
-.thanksInTouchImage {
-	width:650px;
+.thanksInTouchImage { /* "Thanks for getting in touch" title */
+width:650px;
 }
-.lowerBlurb {
+.lowerBlurb { /* blurb below the title */
 	margin-top:50px;
 	font-family:JosefinSlabRegular; 
 	color:#9bce6c; 
 	font-size:2em;
 }
-.logoContainer {
+.logoContainer { /* contains the logo at the bottom of the page */
 	text-align:center; 
 	margin-top:75px;
 }
@@ -26,15 +28,16 @@
 <div class="container" id="top">
 	<div class="row">
 		<div class="twelve columns" id="innerContainer">
+			<!-- Page title: Thanks for Getting in Touch! -->
+			<%= image_tag "https://s3-us-west-1.amazonaws.com/volunteervoice/images/thanksInTouch.png", :class => "thanksInTouchImage"%><!-- end page title -->
 
-		<%= image_tag "https://s3-us-west-1.amazonaws.com/volunteervoice/images/thanksInTouch.png", :class => "thanksInTouchImage"%>
-		
-		<p class="lowerBlurb">We will get back to you ASAP. </p>
-		
-		
-<div class="logoContainer">		
-<%= link_to (image_tag "https://s3-us-west-1.amazonaws.com/volunteervoice/images/logo.png"), root_path, :onmousedown => "this.className = 'shadowed'", :onmouseup => "this.className = 'nothing'"%>
-</div>
-</div>
-</div>
-</div>
+			<!-- blurb below the page title -->
+			<p class="lowerBlurb">We will get back to you ASAP. </p><!-- end blurb -->
+
+			<!-- logo: link to homepage -->
+			<div class="logoContainer">		
+			<%= link_to (image_tag "https://s3-us-west-1.amazonaws.com/volunteervoice/images/logo.png"), root_path, :onmousedown => "this.className = 'shadowed'", :onmouseup => "this.className = 'nothing'"%>
+			</div><!-- end logo -->
+		</div><!-- end innerContainer -->
+	</div><!-- end row -->
+</div><!-- end container -->
